# leak_monitoring_app

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  package.json  pyproject.toml
.github/workflows/: code-format.yml
config/systemd/: docker-compose@.service
config/ufw/: ndlm_leak_monitoring_app
docker/: .dockerignore  Dockerfile  compose.env  docker-compose.yml  requirements.txt
docker/env_example/: app_server.env  mqtt_broker.env
docker/nginx/: nginx.conf
docker/nginx/conf.d/: http_app.conf  http_emqx.conf  stream_emqx.conf
docker/src/app_server/: __init__.py  __main__.py  bg_task.py  conf.py  data_class.py  endec.py  endpoint.py  exception_handler.py  logging.py  main.py  middleware.py  mqtt_client.py  route.py  sse.py
docker/src/templates/: _side_menu.jinja  _top_bar.jinja  _uikit.jinja  dashboard.jinja  hello_world.jinja  http_error.jinja
docker/src/templates/macro/: dashboard.jinja  offcanvas.jinja  toggle.jinja
docker/src/templates/styles/: alert_device_card.jinja  base.jinja  top_bar.jinja
mqttc/: bin_msg.py  mqtt_pub.py
scripts/: dump_deps.py
