[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
    /(
        | \.vscode
    )/
)
'''

[tool.poetry]
name = "leak_monitoring_app"
version = "0.1.0"
description = ""
authors = ["Shen-Teng Tu <tusamten@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
