[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
    /(
        | \.vscode
    )/
)
'''

[tool.poetry]
name = "leak_monitoring_app"
version = "0.1.0"
description = ""
authors = ["Shen-Teng Tu <tusamten@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
gmqtt = "^0.6.7"
uvloop = "^0.14.0"
uvicorn = {extras = ["standard"], version = "^0.12.2"}
starlette = {extras = ["full"], version = "^0.13.8"}
sse-starlette = "^0.6.1"
x-msgpack = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
debugpy = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
